--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "type_traits": "c"
+        "type_traits": "c",
+        "time.h": "c",
+        "pthread.h": "c"
     }
 }
