--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
-        "type_traits": "c",
-        "time.h": "c",
-        "pthread.h": "c"
-    }
+		"type_traits": "c",
+		"time.h": "c",
+		"pthread.h": "c",
+		"stdlib.h": "c",
+		"unistd.h": "c"
+	}
 }
